[package]
name = "rust-helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dependencies.windows]
version = "0.52.0"
features = [
    "Foundation_Collections",
    "Web_Syndication",
]
